--- a/Oja_x86/Oja_x86.vcxproj
+++ b/Oja_x86/Oja_x86.vcxproj
@@ -94,6 +94,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <SuppressStartupBanner>false</SuppressStartupBanner>
       <CallingConvention>Cdecl</CallingConvention>
+      <AdditionalOptions>/D _CRT_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
